[package]
name = "main"
version = "0.2.0"
edition = "2021"

[dependencies]
statsd = { version = "0.15.0" }
log = { version = "0.4.14", features = ["std"] }
zmq-sys = { version = "0.11.0" }
libc = { version = "0.2.117" }
colored = { version = "1.6.1" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.12.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
