[package]
name = "main"
version = "0.2.0"
edition = "2021"

[dependencies]
statsd = { version = "0.16.0" }
log = { version = "0.4.18", features = ["std"] }
zmq-sys = { version = "0.11.0" }
libc = { version = "0.2.147" }
colored = { version = "2.0.1" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.15.1" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
