[package]
name = "boot"
version = "0.1.0"
edition = "2018"

[dependencies]
log = { version = "0.4" }
metrics = { path = "../metrics" }
relay = { path = "../relay" }
config = { path = "../config" }
simple_logger = { version = "1.11.0" }
signal-hook = { version = "0.3.4" }
bastion = { version = "0.4.4" }

[build-dependencies]